--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ logging.level.org.hibernate.SQL=debug
 
 spring.jackson.time-zone = Europe/London
 spring.jackson.locale = es_ES
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
