Controladores, servicios y repositorios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jackson.time-zone = Europe/London
 spring.jackson.locale = es_ES
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=raulrodriguezmendez1997@gmail.com
+spring.mail.password=10022018
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
